--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <img src=pic2.jpg>
-     <h1> A Series of Semi-Fiction Short Stories! </h1>
+     <h1> A Series of Semi-Fiction Short Stories!!!!! </h1>
 
 <p> <em> This site is a collection of short stories, with each story on a separate page </em> <p>
 
