--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
 <body>
     <img src=pic2.jpg>
-     <h1> A Series of Semi-Fiction Short Stories!!!!! </h1>
+     <h1> A Series of Semi-Fiction Short Stories!! </h1>
 
 <p> <em> This site is a collection of short stories, with each story on a separate page </em> <p>
 
 
     <ol> 
-<li>  <a href="story1.html"> <h3> Line after Line </h3> <a/>  </li>
-<li>  <a href="story2.html"> <h3> Engulfed </h3> <a/>   </li>
+<li>  <a href="story1.html"> <h3> Story 1 </h3> <a/>  </li>
+<li>  <a href="story2.html"> <h3> Story 2 </h3> <a/>   </li>
 
 </ol>
 </body>
