--- a/story2.html
+++ b/story2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head> 
-<title> Englufed </title>
+<title> Engulfed </title>
 </head>
 
 <h1> <em> Engulfed by Darkness.. </em> </h1>
