--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 
     <ol> 
-<li>  <a href="story1.html"> <h3> Bla Bla 1 </h3> <a/>  </li>
-<li>  <a href="story2.html"> <h3> Bla Bla 2 </h3> <a/>   </li>
+<li>  <a href="story1.html"> <h3> Bla Bla Bla 1 </h3> <a/>  </li>
+<li>  <a href="story2.html"> <h3> Bla Bla Bla  2 </h3> <a/>   </li>
 
 </ol>
 </body>
