--- a/story1.html
+++ b/story1.html
@@ -15,6 +15,6 @@
 
  
 
-<p>    He sat there, blowing smoke out his nostrils and mouth, the knife at work in his hand. Line after line, imprecise for some reason. He was a master architect and his stability of hand was his forte. He glanced at the wall, a mahogany clock he had carved out himself last winter looked back at him with hands at 3 and 5. Looked out the window- pitch black. On his mantle-piece lay an oak frame encasing the memory of his parents. That was all that was left of him.  Resting under the frame was a letter from the Dean of Harvard- an invite to a ceremony commemorating his induction as Professor Emeritus.
+<p>    He sat there, blowing smoke out his nostrils and mouth, the knife at work in his hand. Line after line, imprecise for some reason. He was a master architect and his stability of hand was his forte. He glanced at the wall, a mahogany clock he had carved out himself last winter looked back at him with hands at 3 and 5. Looked out the window- pitch black. On his mantle-piece lay an oak frame encasing the memory of his parents. That was all that was left of him.  Resting under the frame was a letter from the Dean of Harvard- an invite to a ceremony commemorating his induction as Professor Emeritus!
 </p>>
 <html>
